Fix number inputs having arrows on Firefox

--- a/src/DatePicker.less
+++ b/src/DatePicker.less
@@ -29,6 +29,7 @@
         height: 100%;
         padding: 1px;
         border: 0;
+        -moz-appearance: textfield;
 
         &::-webkit-outer-spin-button,
         &::-webkit-inner-spin-button {
